<resources>
    <string name="app_name">Nimpas</string>
    <string name="create">Create</string>
    <string name="info">Info</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="undo">Undo</string>
    <string name="record_delete_undo_message">Record is deleted</string>
    <string name="unlock_failed">Dictionary unlock failed</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="switch_user">Switch User</string>
    <string name="add_book">Add User</string>
    <string name="book_title">User Name</string>
    <string name="enter_book_title">Enter user name</string>
    <string name="select_book">Select User</string>
    <string name="date_updated">Updated at %s</string>
    <string name="export">Export book</string>
    <string name="lock_book">Close</string>
    <string name="export_subject">%s Book</string>
    <string name="export_text">Download Nimpas at Google Play to use this encrypted book</string>
    <string name="import_book">Import User</string>
    <string name="breadcrumb_root">Root</string>
</resources>
