<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ToolbarTheme"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <include layout="@layout/shadow_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/form_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/form_horizontal_padding"
                android:paddingRight="@dimen/form_horizontal_padding"
                android:paddingBottom="2dp"
                android:text="@string/book_title"
                android:textColor="@color/color_form_item_head"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/book_title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/enter_book_title"
                android:inputType="textCapWords"
                android:paddingLeft="@dimen/form_horizontal_padding"
                android:paddingRight="@dimen/form_horizontal_padding"
                android:textColor="@color/color_form_item_text"
                android:textColorHint="@color/color_form_item_hint"
                android:textSize="20sp"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/form_horizontal_padding"
                android:paddingTop="26dp"
                android:paddingRight="@dimen/form_horizontal_padding"
                android:paddingBottom="2dp"
                android:text="@string/password"
                android:textColor="@color/color_form_item_head"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/keyword_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/form_horizontal_padding"
                android:paddingRight="@dimen/form_horizontal_padding"
                android:textColor="@color/color_form_item_text"
                android:textColorHint="@color/color_form_item_hint"
                android:textSize="20sp"
                tools:ignore="Autofill,LabelFor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/book_add_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/form_horizontal_padding"
                android:layout_marginTop="12dp"
                android:layout_marginRight="@dimen/form_horizontal_padding"
                android:layout_marginBottom="16dp"
                android:text="@string/add_book" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
